<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.dito.abako.abako.Activities.ActLoginUsuario"
    tools:showIn="@layout/activity_logon_usuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:src="@drawable/logo_abako"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negocio_" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:id="@+id/spinnerNegocio"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/agencias" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/spinnerAgencia"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:id="@+id/codeUsu"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="16sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="10"
                app:met_primaryColor="@color/colorPrimary"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/passwordUsu"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="16sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="10"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:id="@+id/btnIngresar"
                android:textColor="@color/colorBlanco"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
