<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:padding="7dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="9dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/cartera"
                android:id="@+id/imgModule"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imgModule"
                android:layout_toEndOf="@+id/imgModule"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_menu"
                    android:src="@drawable/ic_more_vert_black_24dp"
                    android:layout_gravity="right"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextView"
                    android:text="@string/nombre_del_modulo"
                    android:id="@+id/txtNombreModulo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewDescrip"
                    android:text="@string/descripci_n_del_modulo"
                    android:id="@+id/txtDescripcion" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/colorlinea" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:id="@+id/imageView2"
                            android:src="@drawable/user_menu"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/CustomTextViewDescrip"
                            android:text="@string/_56"
                            android:id="@+id/txtUsuario"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:id="@+id/imageView3"
                            android:src="@drawable/visto_bueno"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/CustomTextViewDescrip"
                            android:text="@string/_10"
                            android:id="@+id/txtVistoBueno"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_200_000"
                            android:layout_weight="1"
                            style="@style/CustomTextViewDescrip"
                            android:id="@+id/txtValor"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>